...

    <Button
        android:id="@+id/returnToMainButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
...
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/backBotton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...

            <TextView
                android:id="@+id/job1Title"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job2Title"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job1Company"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job2Company"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job1City"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job2City"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job1State"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job2State"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job1Salary"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job2Salary"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job1Bonus"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job2Bonus"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job1Leave"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job2Leave"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job1Stock"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job2Stock"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job1Home"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job2Home"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job1Wellness"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/job2Wellness"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
...
