...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="State:" />

        <EditText
            android:id="@+id/stateEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck" />
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Yearly Bonus:" />

        <EditText
            android:id="@+id/bonusEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck" />
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Title:" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck" />
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Yearly Salary:" />

        <EditText
            android:id="@+id/salaryEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck" />
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Stock Option:" />

        <EditText
            android:id="@+id/stockEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck" />
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="City:" />

        <EditText
            android:id="@+id/cityEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck" />
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Home Fund:" />

        <EditText
            android:id="@+id/homeEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck" />
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Leave:" />

        <EditText
            android:id="@+id/leaveEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck" />
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Company:" />

        <EditText
            android:id="@+id/companyEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck" />
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Wellness Fund:" />

        <EditText
            android:id="@+id/wellnessEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck" />
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveBotton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:backgroundTint="#673AB7"
        android:onClick="offerHandleClick"
        android:text="Save"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
...
        app:layout_constraintBottom_toTopOf="@+id/backBotton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/compareWithCurrentBotton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:backgroundTint="#673AB7"
        android:onClick="offerHandleClick"
        android:text="Compare With Current Job"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
...
        app:layout_constraintBottom_toTopOf="@+id/saveBotton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addOfferBotton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:backgroundTint="#673AB7"
        android:onClick="offerHandleClick"
        android:text="Add Another Offer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
...
