...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Salary Weight:" />

        <EditText
            android:id="@+id/salaryWeightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Stock Weight:" />

        <EditText
            android:id="@+id/stockWeightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Home Fund Weight:" />

        <EditText
            android:id="@+id/homeWeightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Leave Weight:" />

        <EditText
            android:id="@+id/leaveWeightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Wellness Fund Weight:"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/wellnessWeightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
...
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Bonus Weight:" />

        <EditText
            android:id="@+id/bonusWeightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
...
