...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/enterCurrentJobButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:backgroundTint="#673AB7"
        android:onClick="mainHandleClick"
        android:text="Enter Current Job"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/enterJobOffersButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/enterJobOffersButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:backgroundTint="#673AB7"
        android:onClick="mainHandleClick"
        android:text="Enter Job Offers"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/adjustComparisonSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/adjustComparisonSettingsButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:backgroundTint="#673AB7"
        android:onClick="mainHandleClick"
        android:text="Adjust Comparison Settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/compareJobOffersButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/compareJobOffersButton"
        android:layout_width="0dp"
...
